strem video mode

--- a/templates/video_detail.html
+++ b/templates/video_detail.html
@@ -140,6 +140,12 @@
     </form>
     
     <h2>Actions</h2>
-    <a href="{{ url_for('play_video', video_id=video.id) }}">Play Video</a>
+    <a href="{{ url_for('play_video', video_id=video.id) }}">Play Video on Server</a>
+    
+    <h2>Stream Video</h2>
+    <video width="640" height="360" controls>
+        <source src="{{ url_for('stream_video', video_id=video.id) }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
