--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,7 +6,7 @@ body {
     background-color: #f4f4f4;
 }
 .container {
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
@@ -15,6 +15,22 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.content-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+.video-list-container {
+    width: 60%;
+}
+.video-player-container {
+    width: 35%;
+    position: sticky;
+    top: 20px;
+}
+#videoPlayer {
+    width: 100%;
+    max-width: 100%;
 }
 h1, h2 {
     color: #333;
@@ -25,12 +41,24 @@ h1, h2 {
     width: 100%;
 }
 .video-item {
+    display: flex;
     background-color: #f9f9f9;
     margin-bottom: 20px;
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     text-align: center;
+}
+.video-thumbnail {
+    width: 160px;
+    margin-right: 20px;
+}
+.video-thumbnail img {
+    width: 100%;
+    height: auto;
+}
+.video-details {
+    flex: 1;
 }
 .video-title {
     font-size: 1.2em;
