--- a/static/css/index.css
+++ b/static/css/index.css
@@ -74,6 +74,16 @@ h1, h2 {
     margin-bottom: 10px;
     font-weight: 500;
 }
+.video-title a {
+    color: #2c3e50;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+.video-title a:hover {
+    color: #3498db;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+    font-weight: 600;
+}
 .tag {
     display: inline-block;
     background-color: #e0e0e0;
